# MethaneRadiolysis-G4

./: .gitignore
methaneradiolysis/: CMakeLists.txt  mr_sim.cpp
methaneradiolysis/.claude/: settings.local.json
methaneradiolysis/core/include/: AngleDistribution.hh  CH4DiscreteProcess.hh  CH4DissociationProcess.hh  CH4IonizationProcess.hh  CH4PhotonProcess.hh  CH4RotationalVibrationalProcess.hh  CrossSectionTable.hh  RecoilLookUp.hh
methaneradiolysis/core/src/: AngleDistribution.cpp  CH4DiscreteProcess.cpp  CH4DissociationProcess.cpp  CH4IonizationProcess.cpp  CH4PhotonProcess.cpp  CH4RotationalVibrationalProcess.cpp  CrossSectionTable.cpp  RecoilLookUp.cpp
methaneradiolysis/management/include/: VoxelEnergyMap.hh  action.hh  construction.hh  event.hh  generator.hh  physics.hh  root_process.hh  root_species.hh  run.hh  stepping.hh
methaneradiolysis/management/src/: VoxelEnergyMap.cpp  action.cpp  construction.cpp  event.cpp  generator.cpp  physics.cpp  run.cpp  stepping.cpp
methaneradiolysis/molecules/include/: CH2Plus.hh  CH2Star.hh  CH3Plus.hh  CH3Star.hh  CH4Plus.hh  CHPlus.hh  CHStar.hh  CPlus.hh  H2Molecule.hh  H2Plus.hh  HNeg.hh  HPlus.hh  HStar.hh
methaneradiolysis/molecules/src/: CH2Plus.cpp  CH2star.cpp  CH3Plus.cpp  CH3Star.cpp  CH4Plus.cpp  CHPlus.cpp  CHStar.cpp  CPlus.cpp  H2Molecule.cpp  H2Plus.cpp  HNeg.cpp  HPlus.cpp  HStar.cpp
methaneradiolysis/processes/include/: C1Process.hh  C3Process.hh  C4Process.hh  CHGBandProcess.hh  ElasticProcess.hh  ElectronAttachmentProcess.hh  HAlphaProcess.hh  HBetaProcess.hh  HDeltaProcess.hh  HGammaProcess.hh  Ion1Process.hh  Ion2Process.hh  Ion3Process.hh  Ion4Process.hh  Ion5Process.hh  Ion6Process.hh  Ion7Process.hh  J3Process.hh  J4Process.hh  LyAlphaProcess.hh  LyBetaProcess.hh  LyGammaProcess.hh  ND1Process.hh  ND2Process.hh  ND3Process.hh  Nu1Process.hh  Nu2Process.hh  Nu3Process.hh  Nu4Process.hh
